--- a/README
+++ b/README
@@ -1,5 +1,17 @@
 Python3数据分析
 Anaconda是一个用于科学计算的Python发行版，提供了包管理与环境管理的功能，可以很方便地解决多版本python并存、切换以及各种第三方包安装问题。
 Anaconda利用工具/命令conda来进行package和environment的管理，并且已经包含了Python和相关的配套工具
-numpydemo
-NumPy库学习
+
+数据分析
+numpydemo----------NumPy库学习
+pandas-------------pandas库学习
+matplotlib---------画图工具matplotlib库学习
+jiebademo----------jieba库学习
+pyecharts----------pyecharts画图工具
+
+机器学习
+feature_demo-------特征工程
+knn----------------K-近邻算法
+decision-----------决策树
+naivebayes---------朴素贝叶斯
+
