--- a/README
+++ b/README
@@ -1,6 +1,16 @@
 Python3数据分析
 Anaconda是一个用于科学计算的Python发行版，提供了包管理与环境管理的功能，可以很方便地解决多版本python并存、切换以及各种第三方包安装问题。
 Anaconda利用工具/命令conda来进行package和environment的管理，并且已经包含了Python和相关的配套工具
+下载地址：https://www.anaconda.com/
+
+
+scikit-learn 是基于 Python 语言的机器学习工具
+简单高效的数据挖掘和数据分析工具
+可供大家在各种环境中重复使用
+建立在 NumPy ，SciPy 和 matplotlib 上
+开源，可商业使用 - BSD许可证
+地址：https://scikit-learn.org/stable/
+中文版本：http://www.scikitlearn.com.cn/#sklearn
 
 数据分析
 numpydemo----------NumPy库学习
