--- a/README
+++ b/README
@@ -22,7 +22,7 @@ pyecharts----------pyecharts画图工具
 机器学习
 feature_demo-------特征工程
 knn----------------K-近邻算法
-decision-----------决策树
+decision-----------决策树&随机森林
 naivebayes---------朴素贝叶斯
 linear_regression--线性回归
 xgb----------------xgboost
